--- a/Css/styles.css
+++ b/Css/styles.css
@@ -3,3 +3,6 @@
   font-family: Bitter,Georgia,"Times New Roman",Times,serif;
   font-size: 1.2em;
 }
+.CommentBlock{
+  background-color: #f6f7f9;
+}
